<resources>
    <string name="app_name">How To Be A Billionaire</string>


    <string name="my_node">Node</string>
    <string name="money_use_title">Số tiền bạn đã sử dụng trong ngày</string>
    <string name="money_use_text">999999999999</string>
    <string name="budget_title">Số tiền còn lại</string>
    <string name="budget_text">999999999999</string>
    <string name="money_saving_title">Số tiền đã tiết kiệm được</string>
    <string name="money_saving_text">999999999999</string>
    <string name="goal_title">Mục tiêu</string>
    <string name="input_money">Nhập tiền</string>
    <string name="description">Miêu tả</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="chooseType">Chọn loại</string>
    <string name="money">0</string>

    <string name="category_income">Tiền thu</string>
    <string name="category_outcome">Tiền chi</string>

    <string name="signup">Chưa có tài khoản ? <u>Đăng ký</u></string>
    <string name="login">Bạn đã có tài khoản ? <u>Đăng nhập</u></string>
    <string name="channel_name">Channel Notify</string>
    <string name="channel_description">Thông báo thời gian notify</string>


    <string name="MoneyGoalStr">\??????? VND</string>
    <string name="MoneySavingStr">\?????????</string>
    <string name="guide_title"><b><i>* How To Be A Billionaire *</i></b></string>
    <string name="guide_greet"><i>Hi vọng bạn sẽ thích ứng dụng này</i></string>
    <string name="skip_guide"><u><i>Skip</i></u></string>
    <string name="guide_text_1">Lời nói đầu tiên cho phép chúng tôi gửi lời cảm ơn tới các bạn sử dụng ứng dụng của chúng tôi.</string>
    <string name="guide_text_2">Ứng dụng của chúng tôi là một ứng dụng về quản lí tiết kiếm để giúp bạn có thể trở thành một trong những tỷ phú của thế giới thông qua việc quản lí tiết kiệm của chính mình.</string>

</resources>